--- a/template/header/header.html
+++ b/template/header/header.html
@@ -44,13 +44,13 @@
               <a href="#" class="text_large-2">Statistic</a>
             </li>
             <li>
-              <a href="../../index.html" class="text_large-2">Limitter</a>
+              <a href="/yeti-build/index.html" class="text_large-2">Limitter</a>
             </li>
             <li>
               <a href="#" class="text_large-2">Ladder</a>
             </li>
             <li>
-              <a href="../../runner.html" class="text_large-2">Runner</a>
+              <a href="/yeti-build/runner.html" class="text_large-2">Runner</a>
             </li>
             <li>
               <a class="text_large-2 active-link" href="#">History</a>
