--- a/template/modals/attention/attention.html
+++ b/template/modals/attention/attention.html
@@ -9,7 +9,7 @@
         </h4>
         <img
           class="modal-window-close-icon closeModalTrigger"
-          src="./style_guide_2/img/close.svg"
+          src="../../../style_guide_2/img/close.svg"
           alt="close-cross" />
       </div>
       <div class="modal-attention__content">
@@ -21,7 +21,7 @@
       </div>
       <div class="modal-window-button">
         <button
-          class="button-modal button-modal-left text_small text__color_dark-grey">
+          class="button-modal button-modal-left text_small text__color_dark-grey turnOnTrigger closeModalTrigger">
           Yes
         </button>
         <button
