--- a/template/modals/profitRange/_profit-range.scss
+++ b/template/modals/profitRange/_profit-range.scss
@@ -17,7 +17,7 @@
     padding: .875rem;
     margin-bottom: .25rem;
     position: relative;
-    background: url('./style_guide_2/img/profitRange/bg-top.png') 100% 100% / 100% 100% no-repeat;
+    background: url('../../../style_guide_2/img/profitRange/bg-top.png') 100% 100% / 100% 100% no-repeat;
     .logo {
       margin-bottom: 1.5rem;
     }
@@ -47,7 +47,7 @@
   &-content {
     min-height: 15.3125rem;
     padding: 2rem 1rem;
-    background: url('./style_guide_2/img/profitRange/bg-top.png') 100% 100% / 100% 100% no-repeat;
+    background: url('../../../style_guide_2/img/profitRange/bg-top.png') 100% 100% / 100% 100% no-repeat;
     .line {
       display: flex;
       align-items: center;
