--- a/template/modals/risk-manager/risk-manager.html
+++ b/template/modals/risk-manager/risk-manager.html
@@ -8,7 +8,7 @@
       </h4>
       <img
         class="modal-window-close-icon closeModalTrigger"
-        src="./style_guide_2/img/close.svg"
+        src="../../../style_guide_2/img/close.svg"
         alt="close-cross" />
     </div>
 
@@ -607,7 +607,7 @@
               type="text"
               data-type="time" />
           </div>
-          <div class="input-text-center">
+          <div class="input-text-center input-text-center--with-button">
             <div class="data-wrap" data-type="dynamic" data-state="ture">
               <p class="text_large text__color_dark-grey">23:53</p>
               <p class="text_small text__color_dark-grey"></p>
