--- a/style_guide_2/main.scss
+++ b/style_guide_2/main.scss
@@ -186,6 +186,18 @@ svg {
     border-radius: 6px;
     cursor: default;
     position: relative;
+
+    &.disabled {
+      color: $lightGray;
+      pointer-events: none;
+
+      .selector__header {
+        &::after {
+          opacity: 40%;
+        }
+      }
+    }
+
     &_full {
       width: 100% !important;
     }
@@ -255,6 +267,12 @@ svg {
       text-transform: capitalize;
       display: inline-block;
     }
+
+    &__dropdown-text {
+      min-width: 100%;
+      line-height: 1.5;
+    }
+
     .text-wrapp {
       max-width: 105px;
       padding-left: 5px;
@@ -472,6 +490,19 @@ svg {
       border-radius: 0 6px 6px 0;
     }
   }
+
+  &.hide-value {
+    .data-wrap {
+      p {
+        display: none;
+      }
+
+      &::before {
+        color: $lightGray;
+        content: '-';
+      }
+    }
+  }
 }
 
 // button
@@ -485,7 +516,8 @@ svg {
   text-align: center;
 
   &:disabled {
-    color: rgba(52, 64, 84, 0.25);
+    color: $lightGray;
+    pointer-events: none;
   }
   &_large-2 {
     width: 160px;
@@ -549,6 +581,11 @@ svg {
   justify-content: baseline;
   justify-content: baseline;
   flex: 1 0 0;
+
+  &:disabled {
+    color: $lightGray;
+    pointer-events: none;
+  }
 
   &_normal-1 {
     border-radius: 6px 0 0 6px;
@@ -653,7 +690,8 @@ svg {
 
 //new style
 .data-wrap {
-  display: flex;
+  display: inline-flex;
+  white-space: nowrap;
   align-items: baseline;
 }
 
@@ -762,11 +800,12 @@ svg {
 .input-text-center {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
+  text-align: center;
+
+  &--with-button {
+    padding-left: 16px;
+  }
 }
 
 .table-switch {
@@ -822,17 +861,30 @@ svg {
 }
 
 .button-input {
-  height: $height-regural;
   border: 1px solid white;
   border-radius: 6px;
   background-color: #f7f7f8;
   color: #344054;
   text-align: center;
+
+  &:disabled {
+    color: $lightGray;
+    pointer-events: none;
+  }
+
+  &:active {
+    color: #344054;
+    background-color: #cddfe7;
+    background: linear-gradient(
+      180deg,
+      rgba(52, 64, 84, 0.25) 0%,
+      rgba(205, 223, 231, 1) 27%
+    );
+  }
 }
 
 .button-time-small {
   width: 16px;
-  height: 28px;
   padding: 0;
   border-left: 0.5px;
   z-index: 6;
@@ -840,7 +892,7 @@ svg {
 
 .button-time {
   width: 16px;
-  height: 28px;
+  height: 100%;
   padding: 0;
   border-left: 0.5px;
   position: absolute;
@@ -1230,6 +1282,16 @@ svg {
   letter-spacing: 0.02px;
   width: 100%;
   height: 100%;
+
+  &.toggle-active {
+    color: #344054;
+    background-color: #cddfe7;
+    background: linear-gradient(
+      180deg,
+      rgba(52, 64, 84, 0.25) 0%,
+      rgba(205, 223, 231, 1) 27%
+    );
+  }
 }
 .button-modal:active {
   background: #cddfe7;
@@ -1271,6 +1333,22 @@ svg {
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+
+    .button-new-wrap_full {
+      .button-group_block-button_1 {
+        border-top: none;
+        border-left: none;
+        border-bottom: none;
+        border-radius: 10px 0 0 0;
+      }
+
+      .button-group_block-button_2 {
+        border-top: none;
+        border-right: none;
+        border-bottom: none;
+        border-radius: 0 10px 0 0;
+      }
     }
   }
   .block-content-wrap {
