--- a/template/modals/key-performance/key-performance.html
+++ b/template/modals/key-performance/key-performance.html
@@ -8,7 +8,7 @@
       </h4>
       <img
         class="modal-window-close-icon closeModalTrigger"
-        src="./style_guide_2/img/close.svg"
+        src="../../../style_guide_2/img/close.svg"
         alt="close-cross" />
     </div>
 
