--- a/template/modals/symbol-setup/_symbol-setup.scss
+++ b/template/modals/symbol-setup/_symbol-setup.scss
@@ -62,13 +62,22 @@
   }
   .table-cell {
     width: 100%;
-    height: 14px;
+    height: 18px;
     border-radius: 0px;
     &_top {
       border-radius: 0 6px 0 0;
     }
     &_bottom {
       border-radius: 0 0 6px 0;
+    }
+
+    input {
+      position: absolute;
+      inset: 0;
+    }
+
+    .data-wrap {
+      vertical-align: text-top;
     }
   }
 }
