fix: runner link

--- a/template/header/header.html
+++ b/template/header/header.html
@@ -50,7 +50,7 @@
               <a href="#" class="text_large-2">Ladder</a>
             </li>
             <li>
-              <a href="/runner.html" class="text_large-2">Runner</a>
+              <a href="/runner" class="text_large-2">Runner</a>
             </li>
             <li>
               <a class="text_large-2 active-link" href="#">History</a>
