--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="../../../styles/style.css" />
-
 <section class="section__stretch-panel stretch-panel" data-panel-id>
   <div class="stretch-panel__body">
     <div class="stretch-panel__header">
@@ -711,7 +709,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -1193,7 +1192,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -1770,7 +1770,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -1881,7 +1882,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -2103,7 +2105,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -2703,7 +2706,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -2994,7 +2998,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
@@ -4065,7 +4070,8 @@
                                   class="input-field input-field_right text_large text__color_dark-grey"
                                   type="text" />
                               </div>
-                              <div class="input-text-center input-text-center--with-button">
+                              <div
+                                class="input-text-center input-text-center--with-button">
                                 <div
                                   class="data-wrap"
                                   data-type="dynamic"
