fix: images path

--- a/template/modals/_modals.scss
+++ b/template/modals/_modals.scss
@@ -69,7 +69,7 @@
     background-color: #f2f4f7;
     border-radius: 50%;
     border: none;
-    background-image: url('../../style_guide_2/img/close.svg');
+    background-image: url('../../img/close.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 8px;
