--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -70,7 +70,7 @@
           <!-- Hide StretchPanel (stretchPanelActions.js) -->
           <button type="button" class="button-new button-normalize button-hide">
             <img
-              src="./style_guide_2/img/stretchPanel/icon-button-hide.svg"
+              src="../../../img/stretchPanel/icon-button-hide.svg"
               alt="Icon" />
           </button>
           <!-- Close StretchPanel (stretchPanelActions.js) -->
@@ -79,7 +79,7 @@
             class="button-new button-normalize"
             data-modal-name="close-limit">
             <img
-              src="./style_guide_2/img/stretchPanel/icon-button-close.svg"
+              src="../../../img/stretchPanel/icon-button-close.svg"
               alt="Icon" />
           </button>
         </div>
@@ -7510,7 +7510,8 @@
                                     data-type="number"
                                     data-unit="ticks" />
                                 </div>
-                                <div class="input-text-center input-text-center--with-button">
+                                <div
+                                  class="input-text-center input-text-center--with-button">
                                   <div
                                     class="data-wrap"
                                     data-type="dynamic"
@@ -8039,7 +8040,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8073,7 +8074,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8107,7 +8108,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8140,7 +8141,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8174,7 +8175,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8219,7 +8220,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-gallery__content">
@@ -8319,7 +8320,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8543,7 +8544,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8769,7 +8770,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8942,7 +8943,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -9166,7 +9167,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid">
@@ -9329,7 +9330,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid">
