--- a/styles/style.css
+++ b/styles/style.css
@@ -800,7 +800,7 @@ svg {
   position: absolute;
   right: 7px;
   top: 10px;
-  background-image: url("../style_guide_2/img/selector-arrow_down.svg");
+  background-image: url("../img/selector-arrow_down.svg");
   width: 18px;
   height: 8px;
   background-position: center;
@@ -816,7 +816,7 @@ svg {
   position: absolute;
   right: 7px;
   top: 10px;
-  background-image: url("../style_guide_2/img/selector-arrow_down.svg");
+  background-image: url("../img/selector-arrow_down.svg");
   width: 18px;
   height: 8px;
   background-position: center;
@@ -2072,7 +2072,7 @@ svg {
   background-color: #00A3FF;
 }
 .nav__container_btn-schedule-menu {
-  background-image: url("../../style_guide_2/img/schedule.svg");
+  background-image: url("../../img/schedule.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -2360,7 +2360,7 @@ svg {
   background-color: #f2f4f7;
   border-radius: 50%;
   border: none;
-  background-image: url("../../style_guide_2/img/close.svg");
+  background-image: url("../../img/close.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 8px;
