--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -99,7 +99,7 @@
           <!-- Hide StretchPanel (stretchPanelActions.js) -->
           <button type="button" class="button-new button-normalize button-hide">
             <img
-              src="./style_guide_2/img/stretchPanel/icon-button-hide.svg"
+              src="../../../img/stretchPanel/icon-button-hide.svg"
               alt="Icon" />
           </button>
           <!-- Close StretchPanel (stretchPanelActions.js) -->
@@ -108,7 +108,7 @@
             class="button-new button-normalize"
             data-modal-name="close-limit">
             <img
-              src="./style_guide_2/img/stretchPanel/icon-button-close.svg"
+              src="../../../img/stretchPanel/icon-button-close.svg"
               alt="Icon" />
           </button>
         </div>
@@ -4566,7 +4566,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4599,7 +4599,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4632,7 +4632,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4665,7 +4665,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4699,7 +4699,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4744,7 +4744,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../style_guide_2/img/close.svg"
+            src="../../../img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-gallery__content">
