--- a/template/header/_header.scss
+++ b/template/header/_header.scss
@@ -217,7 +217,7 @@
     // .nav__container_btn-Schedule-menu
 
     &_btn-schedule-menu {
-      background-image: url('../../img/schedule.svg');
+      background-image: url('/img/schedule.svg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
