--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -8040,7 +8040,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8074,7 +8074,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8108,7 +8108,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8141,7 +8141,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8175,7 +8175,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -8220,7 +8220,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-gallery__content">
@@ -8320,7 +8320,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8544,7 +8544,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8770,7 +8770,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -8943,7 +8943,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid fieldContainer">
@@ -9167,7 +9167,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid">
@@ -9330,7 +9330,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__grid">
