--- a/template/modals/settings/settings.html
+++ b/template/modals/settings/settings.html
@@ -9,7 +9,7 @@
 
       <img
         class="modal-window-close-icon closeModalTrigger"
-        src="../../../img/close.svg"
+        src="./img/close.svg"
         alt="close-cross" />
     </div>
 
