--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -4566,7 +4566,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4599,7 +4599,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4632,7 +4632,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4665,7 +4665,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4699,7 +4699,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-attention__content">
@@ -4744,7 +4744,7 @@
           </h4>
           <img
             class="modal-window-close-icon closeModalTrigger"
-            src="../../../img/close.svg"
+            src="./img/close.svg"
             alt="close-cross" />
         </div>
         <div class="modal-gallery__content">
