--- a/template/modals/demo/demo.html
+++ b/template/modals/demo/demo.html
@@ -6,7 +6,7 @@
       </h4>
       <img
         class="modal-window-close-icon"
-        src="../../../img/close.svg"
+        src="./img/close.svg"
         alt="close-cross" />
     </div>
     <div class="modal-window-content">
