--- a/template/modals/logo/logo.html
+++ b/template/modals/logo/logo.html
@@ -8,7 +8,7 @@
       </h4>
       <img
         class="modal-window-close-icon closeModalTrigger"
-        src="../../../img/close.svg"
+        src="./img/close.svg"
         alt="close-cross" />
     </div>
 
