--- a/template/modals/schedule/schedule.html
+++ b/template/modals/schedule/schedule.html
@@ -7,7 +7,7 @@
             </h4>
             <img
               class="modal-window-close-icon"
-              src="../../../img/close.svg"
+              src="./img/close.svg"
               alt="close-cross"
             />
         </div>
