--- a/template/modals/tag-master/tag-master.html
+++ b/template/modals/tag-master/tag-master.html
@@ -9,7 +9,7 @@
         </h4>
         <img
           class="modal-window-close-icon closeModalTrigger"
-          src="../../../img/close.svg"
+          src="./img/close.svg"
           alt="close-cross" />
       </div>
       <div class="modal-tag-master__grid">
