--- a/template/header/header.html
+++ b/template/header/header.html
@@ -44,7 +44,7 @@
               <a href="#" class="text_large-2">Statistic</a>
             </li>
             <li>
-              <a href="/" class="text_large-2">Limitter</a>
+              <a href="./" class="text_large-2">Limitter</a>
             </li>
             <li>
               <a href="#" class="text_large-2">Ladder</a>
