fix: image src url

--- a/template/modals/stretchPanel/stretch-panel.html
+++ b/template/modals/stretchPanel/stretch-panel.html
@@ -99,7 +99,7 @@
           <!-- Hide StretchPanel (stretchPanelActions.js) -->
           <button type="button" class="button-new button-normalize button-hide">
             <img
-              src="../../../img/stretchPanel/icon-button-hide.svg"
+              src="./img/stretchPanel/icon-button-hide.svg"
               alt="Icon" />
           </button>
           <!-- Close StretchPanel (stretchPanelActions.js) -->
@@ -108,7 +108,7 @@
             class="button-new button-normalize"
             data-modal-name="close-limit">
             <img
-              src="../../../img/stretchPanel/icon-button-close.svg"
+              src="./img/stretchPanel/icon-button-close.svg"
               alt="Icon" />
           </button>
         </div>
