--- a/styles/style.css
+++ b/styles/style.css
@@ -2360,7 +2360,7 @@ svg {
   background-color: #f2f4f7;
   border-radius: 50%;
   border: none;
-  background-image: url("/img/close.svg");
+  background-image: url("./img/close.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 8px;
