fix: images src url

--- a/styles/style.css
+++ b/styles/style.css
@@ -2072,7 +2072,7 @@ svg {
   background-color: #00A3FF;
 }
 .nav__container_btn-schedule-menu {
-  background-image: url("/img/schedule.svg");
+  background-image: url("./img/schedule.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
