fix: breakeven layout

--- a/template/modals/runner-panel/runner-panel.html
+++ b/template/modals/runner-panel/runner-panel.html
@@ -5028,6 +5028,34 @@
                         </template>
                       </div>
                     </div>
+
+                    <div class="line">
+                      <div class="d-flex justify-content-between">
+                        <button
+                          class="button-new button-new_save-small text_regular"
+                          data-type="btn">
+                          Margin
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular"
+                          data-type="btn">
+                          Mnt
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular btn-active"
+                          data-type="btn">
+                          Fee
+                        </button>
+
+                        <button
+                          class="button-new button-new_save-small text_regular btn-active"
+                          data-type="btn">
+                          Funding
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
